--- a/Resources/Prototypes/Entities/Mobs/mechs.yml
+++ b/Resources/Prototypes/Entities/Mobs/mechs.yml
@@ -218,6 +218,11 @@
           MechMaulerDestroyed:
             min: 1
             max: 1
+  - type: Explosive
+    explosionType: Default
+    maxIntensity: 100
+    intensitySlope: 1.5
+    totalIntensity: 200
   - type: Access
     groups:
     - AllAccess
@@ -560,7 +565,7 @@
     thresholds:
     - trigger:
         !type:DamageTrigger
-        damage: 300
+        damage: 400
       behaviors:
       - !type:DoActsBehavior
         acts: ["Destruction"]
