--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,16 @@ test-debug:
     - python3 RUN_THIS.py
     - dotnet restore
     - dotnet build --configuration DebugOpt --no-restore /p:WarningsAsErrors=nullable /m
-    - pwsh -Command "dotnet test --configuration DebugOpt --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
-    - pwsh -Command "dotnet test --configuration DebugOpt --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
+  artifacts:
+    when: always
+    paths:
+     - artifacts/*
+    reports:
+      junit:
+       - artifacts/*
 
 test-release:
   stage: test
@@ -26,9 +33,16 @@ test-release:
     - python3 RUN_THIS.py
     - dotnet restore
     - dotnet build --configuration Tools --no-restore /p:WarningsAsErrors=nullable /m
-    - pwsh -Command "dotnet test --configuration Tools --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
-    - pwsh -Command "dotnet test --configuration Tools --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
+  artifacts:
+    when: always
+    paths:
+    - artifacts/*
+    reports:
+      junit:
+      - artifacts/*
 
 publish:
   stage: publish
