--- a/Resources/Prototypes/Catalog/revenant_catalog.yml
+++ b/Resources/Prototypes/Catalog/revenant_catalog.yml
@@ -1,7 +1,7 @@
 - type: listing
   id: RevenantDefile
-  name: Defile
-  description: Defiles the surrounding area, ripping up floors, damaging windows, opening containers, and throwing items. Using it leaves you vulnerable to attacks for a short period of time.
+  name: defile-revenant-name
+  description: defile-revenant-desc
   productAction: ActionRevenantDefile
   cost:
     StolenEssence: 10
@@ -13,8 +13,8 @@
 
 - type: listing
   id: RevenantOverloadLights
-  name: Overload Lights
-  description: Overloads all nearby lights, causing lights to pulse and sending out dangerous lightning. Using it leaves you vulnerable to attacks for a long period of time.
+  name: overload-revenant-name
+  description: overload-revenant-desc
   productAction: ActionRevenantOverloadLights
   cost:
     StolenEssence: 25
@@ -39,8 +39,8 @@
 
 - type: listing
   id: RevenantMalfunction
-  name: Malfunction
-  description: Makes nearby electronics stop working properly. Using it leaves you vulnerable to attacks for a long period of time.
+  name: malfunction-revenant-name
+  description: malfunction-revenant-desc
   productAction: ActionRevenantMalfunction
   cost:
     StolenEssence: 125
