--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,14 +15,14 @@ test-debug:
     - dotnet restore
     - dotnet build --configuration DebugOpt --no-restore /p:WarningsAsErrors=nullable /m
 #    - 'dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt'
-    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.Tests/Content.Tests.csproj"'
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
   artifacts:
     when: always
-    paths:
-    - 'Content.Tests/TestResults/TestResults.xml'
-    - 'Content.IntegrationTests/TestResults/TestResults.xml'
+#    paths:
+#    - 'Content.Tests/TestResults/TestResults.xml'
+#    - 'Content.IntegrationTests/TestResults/TestResults.xml'
 #     - artifacts/*
     reports:
       junit:
@@ -39,15 +39,15 @@ test-release:
     - dotnet restore
     - dotnet build --configuration Tools --no-restore /p:WarningsAsErrors=nullable /m
 #    - 'dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools'
-    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.Tests/Content.Tests.csproj"'
+    - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
   artifacts:
     when: always
-    paths:
+#    paths:
 #    - artifacts/*
-    - 'Content.Tests/TestResults/TestResults.xml'
-    - 'Content.IntegrationTests/TestResults/TestResults.xml'
+#    - 'Content.Tests/TestResults/TestResults.xml'
+#    - 'Content.IntegrationTests/TestResults/TestResults.xml'
     reports:
       junit:
        - 'Content.Tests/TestResults/TestResults.xml'
