--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,16 +18,16 @@ test-debug:
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration DebugOpt --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
-  artifacts:
-    when: always
+#  artifacts:
+#    when: always
 #    paths:
 #    - 'Content.Tests/TestResults/TestResults.xml'
 #    - 'Content.IntegrationTests/TestResults/TestResults.xml'
 #     - artifacts/*
-    reports:
-      junit:
-       - 'Content.Tests/TestResults/TestResults.xml'
-       - 'Content.IntegrationTests/TestResults/TestResults.xml'
+#    reports:
+#      junit:
+#       - 'Content.Tests/TestResults/TestResults.xml'
+#       - 'Content.IntegrationTests/TestResults/TestResults.xml'
 #       - artifacts/*
 
 test-release:
@@ -42,16 +42,16 @@ test-release:
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.Tests/Content.Tests.csproj -- NUnit.ConsoleOut=0"'
     - export DOTNET_gcServer=1
     - 'pwsh -Command "dotnet test --test-adapter-path:. --logger:"junit;LogFilePath=..\artifacts\{assembly}-test-result.xml;MethodFormat=Class;FailureBodyFormat=Verbose" --configuration Tools --no-build Content.IntegrationTests/Content.IntegrationTests.csproj -- NUnit.ConsoleOut=0"'
-  artifacts:
-    when: always
+#  artifacts:
+#    when: always
 #    paths:
 #    - artifacts/*
 #    - 'Content.Tests/TestResults/TestResults.xml'
 #    - 'Content.IntegrationTests/TestResults/TestResults.xml'
-    reports:
-      junit:
-       - 'Content.Tests/TestResults/TestResults.xml'
-       - 'Content.IntegrationTests/TestResults/TestResults.xml'
+#    reports:
+#      junit:
+#       - 'Content.Tests/TestResults/TestResults.xml'
+#       - 'Content.IntegrationTests/TestResults/TestResults.xml'
 #      - artifacts/*
 
 publish:
