--- a/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
@@ -60,9 +60,6 @@
     thresholds:
       0: Alive
       50: Dead
-  - type: SlowOnDamage
-    speedModifierThresholds:
-      25: 0.5
   - type: Stamina
     critThreshold: 200
   - type: Bloodstream
@@ -131,7 +128,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      100: Dead
+      75: Dead
   - type: Stamina
     critThreshold: 300
   - type: SlowOnDamage
@@ -164,16 +161,18 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      80: Dead
-  - type: SlowOnDamage
-    speedModifierThresholds:
-      40: 0.7
+      150: Dead
   - type: MeleeWeapon
     damage:
       groups:
-        Brute: 6
+        Brute: 5
   - type: MovementSpeedModifier
-    baseSprintSpeed: 4
+    baseWalkSpeed: 2.0
+    baseSprintSpeed: 2.5
+  - type: SlowOnDamage
+    speedModifierThresholds:
+      100: 0.4
+      50: 0.7
   - type: Fixtures
     fixtures:
       fix1:
@@ -202,10 +201,11 @@
     thresholds:
       0: Alive
       300: Dead
-  - type: SlowOnDamage
-    speedModifierThresholds:
-      150: 0.7
+  - type: Stamina
+    critThreshold: 1500
   - type: MovementSpeedModifier
+    baseWalkSpeed: 2.8
+    baseSprintSpeed: 3.8
   - type: Butcherable
     spawned: 
     - id: FoodMeatXeno
@@ -214,11 +214,16 @@
       prob: 0.5
     - id: MaterialXenoScale1
       prob: 0.5
+
   - type: MeleeWeapon
     hidden: true
     damage:
      groups:
-       Brute: 12
+       Brute: 20
+  - type: SlowOnDamage
+    speedModifierThresholds:
+      250: 0.4
+      200: 0.7
   - type: Fixtures
     fixtures:
       fix1:
@@ -249,9 +254,12 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      100: Dead
+      200: Dead
+  - type: Stamina
+    critThreshold: 550
   - type: MovementSpeedModifier
-    baseSprintSpeed: 4
+    baseWalkSpeed: 2.3
+    baseSprintSpeed: 4.2
   - type: MeleeWeapon
     hidden: true
     damage:
@@ -259,7 +267,8 @@
        Brute: 10
   - type: SlowOnDamage
     speedModifierThresholds:
-      50: 0.7
+      150: 0.5
+      100: 0.7
   - type: Fixtures
     fixtures:
       fix1:
@@ -284,13 +293,16 @@
     layers:
     - map: ["enum.DamageStateVisualLayers.Base"]
       state: running
+  - type: Stamina
+    critThreshold: 250
   - type: MovementSpeedModifier
+    baseWalkSpeed: 2.7
     baseSprintSpeed: 6.0
   - type: MeleeWeapon
     hidden: true
     damage:
      groups:
-       Brute: 5
+       Brute: 3
   - type: Fixtures
     fixtures:
       fix1:
@@ -328,13 +340,12 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      50: Dead
-  - type: SlowOnDamage
-    speedModifierThresholds:
-      25: 0.7
+      75: Dead
   - type: HTN
     rootTask:
       task: SimpleRangedHostileCompound
+  - type: Stamina
+    critThreshold: 300
   - type: RechargeBasicEntityAmmo
     rechargeCooldown: 0.75
   - type: BasicEntityAmmoProvider
@@ -348,6 +359,9 @@
     availableModes:
       - FullAuto
     soundGunshot: /Audio/Weapons/Xeno/alien_spitacid.ogg
+  - type: SlowOnDamage
+    speedModifierThresholds:
+      50: 0.4
   - type: Fixtures
     fixtures:
       fix1:
