Felinids are now "meowing" (#252)

--- a/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
@@ -30,6 +30,7 @@
       effects:
       - !type:WashCreamPieReaction
       - !type:CancelDoAfters
+  - type: NyaAccent
 
 - type: entity
   name: Urist McHands
