--- a/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/blueshield.yml
@@ -26,10 +26,12 @@
   - Command
   - Medical
   - Engineering
-  - Maintenance
   - External
   - Security
   - Brig
+  - Maintenance
+  - Cargo
+  - Research
 
 - type: startingGear
   id: BlueShieldGear
