--- a/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
@@ -20,6 +20,13 @@
     durationMultiplier: 1
     bangAddMultiplier: 0.65
     bangFlash: false
+  - type: Speech
+    speechVerb: Felinid
+  - type: Vocal
+    sounds:
+      Male: UnisexFelinid
+      Female: UnisexFelinid
+      Unsexed: UnisexFelinid
   - type: Reactive
     groups:
       Flammable: [ Touch ]
