--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -174,6 +174,17 @@
   params:
     variation: 0.125
 
+- type: emoteSounds
+  id: UnisexFelinid
+  sounds:
+    Scream:
+      path: /Audio/Voice/Felinid/felinidscream.ogg
+    Laugh:
+      collection: FelinidLaugh
+    Meows:
+      collection: FelinidMeow
+  params:
+    variation: 0.125
 
 - type: emoteSounds
   id: UnisexArachnid
