--- a/Resources/Prototypes/Voice/speech_verbs.yml
+++ b/Resources/Prototypes/Voice/speech_verbs.yml
@@ -39,6 +39,13 @@
   - chat-speech-verb-reptilian-1
 
 - type: speechVerb
+  id: Felinid
+  speechVerbStrings:
+  - chat-speech-verb-felinid-1
+  - chat-speech-verb-felinid-2
+  - chat-speech-verb-felinid-3
+
+- type: speechVerb
   id: Moth
   speechVerbStrings:
   - chat-speech-verb-winged-1
