Fix projectile id

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/dartgun.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/dartgun.yml
@@ -2,7 +2,7 @@
   id: SyringeGunProject
   name: Syrgine
   noSpawn: true
-  parent: syringeprojctile
+  parent: SyringeProjctile
   components:
   - type: Sprite
     sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
