--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -67,7 +67,7 @@
     lifetime: 10
 
 - type: entity
-  id: syringeprojctile
+  id: SyringeProjctile
   parent: BaseBullet
   noSpawn: true
   components:
