metal pipe audio fix

--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sledgehammer.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sledgehammer.yml
@@ -27,7 +27,7 @@
     quickEquip: false
 
 - type: entity
-  name: Metal Pipe
+  name: metal pipe
   parent: BaseItem
   id: MetalPipe
   description: A legendary greytide weapon.
@@ -35,6 +35,8 @@
   - type: EmitSoundOnLand
     sound:
       path: /Audio/Effects/metal-pipe-falling.ogg
+      params:
+        volume: 10
   - type: Sprite
     sprite: Objects/Weapons/Melee/metalpipe.rsi
     state: icon
