--- a/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/felinid.yml
@@ -20,6 +20,8 @@
     durationMultiplier: 1
     bangAddMultiplier: 0.65
     bangFlash: false
+  - type: Speech
+    speechVerb: Felinid
   - type: Reactive
     groups:
       Flammable: [ Touch ]
