--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -489,6 +489,50 @@
       fireCost: 100
 
 - type: entity
+  name: X-01 multiphase energy gun
+  parent: BaseWeaponBatterySmall
+  id: WeaponLaserHos
+  description: Nanotrasen's first attempt to remake the Antique Laser Gun. Has more firing modes on offer but lacks the ability to self-recharge.
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Battery/hoslasergun.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-unshaded-4
+      map: ["enum.GunVisualLayers.MagUnshaded"]
+      shader: unshaded
+  - type: Clothing
+    sprite: Objects/Weapons/Guns/Battery/hoslasergun.rsi
+  - type: Gun
+    projectileSpeed: 75
+  - type: Item
+    size: 25
+  - type: ProjectileBatteryAmmoProvider
+    proto: X01Attack
+    fireCost: 100 
+  - type: BatteryWeaponFireModes
+    fireModes:
+    - proto: X01Attack
+      fireCost: 100
+    - proto: BulletDisablerX01
+      fireCost: 75
+  - type: Battery
+    maxCharge: 1200
+    startingCharge: 1200
+  - type: MagazineVisuals
+    magState: mag
+    steps: 5
+    zeroVisible: true
+  - type: Appearance
+  - type: Tag
+    tags:
+    - HighRiskItem
+  - type: StaticPrice
+    price: 750
+
+
+- type: entity
   name: Eye of a behonker
   parent: BaseWeaponBatterySmall
   id: WeaponBehonkerLaser
