--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -242,6 +242,26 @@
     soundForce: true
 
 - type: entity
+  name : disabler bolt
+  id: BulletDisablerX01
+  parent: BulletDisabler
+  noSpawn: true
+  components:
+  - type: Fixtures
+    fixtures:
+      projectile:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.2,-0.2,0.2,0.2"
+        hard: false
+        mask:
+        - Opaque
+      fly-by: *flybyfixture
+  - type: Reflective
+    reflective:
+    - Energy
+
+- type: entity
   name : disabler bolt practice
   id: BulletDisablerPractice
   parent: BaseBullet
@@ -879,6 +899,22 @@
     damage:
       types:
         Heat: 25
+
+- type: entity
+  name: emitter bolt
+  id: X01Attack
+  parent: EmitterBolt
+  noSpawn: true
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles_tg.rsi
+    layers:
+    - state: redtrac
+      shader: unshaded
+  - type: Projectile
+    damage:
+      types:
+        Heat: 22
 
 - type: entity
   id: BFGBullet
