--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -17,6 +17,7 @@
     MagbootsStealObjective: 1
     CorgiMeatStealObjective: 1
     CaptainGunStealObjective: 0.5
+    HosGunStealObjective: 0.5
     CaptainJetpackStealObjective: 0.5
     HandTeleporterStealObjective: 0.5
     SecretDocumentsStealObjective: 0.5
